[build-system]
requires = [
    "wheel",
    "numpy",
    "meson-python >= 0.15",
    "cython >= 3.0",
    "cherab == 1.4.0",
    "tomli; python_version < '3.11'",
]
build-backend = "mesonpy"

[project]
name = "cherab-phix"
description = "Cherab spectroscopy framework: PHiX machine configuration"
version = "2.0.0.dev0"
readme = "README.md"
authors = [
    { name = "Koyo Munechika", email = "munechika.koyo@torus.nr.titech.ac.jp" },
]
maintainers = [
    { name = "Koyo Munechika", email = "munechika.koyo@torus.nr.titech.ac.jp" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">= 3.9, < 3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib < 3.6",  # cherab v1.4.0 dependency
    "contourpy",
    "plotly",
    "cherab == 1.4.0",
    "calcam",
]
license = { file = "LICENSE.md" }

[project.optional-dependencies]
docs = [
    "docutils",
    "ipykernel",
    "ipywidgets",
    "jinja2 < 3.1",
    "nbconvert >= 7.3",
    "nbsphinx",
    "pandoc",
    "pillow",
    "pydata-sphinx-theme < 0.15",
    "pygments >= 2.11.0",
    "sphinx < 8.0",
    "sphinx-codeautolink",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-github-style",
    "sphinx-prompt",
]
dev = [
    "ipython",
    "black",
    "ruff",
    "mypy",
    "rich-click",
    "cython-lint",
    "pre-commit",
    "cython >= 3.0",
    "meson-python >= 0.15",
    "setuptools",  # for installing with setup.py editable mode
    "pytest",
]

[project.urls]
Homepage = "https://cherab-phix.readthedocs.io/"
documentation = "https://cherab-phix.readthedocs.io/"
repository = "https://github.com/munechika-koyo/cherab_phix"

[tool.cython-lint]
max-line-length = 140

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "I", "N", "B", "NPY"]
ignore = ["E501", "N802", "N803", "N806"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["E", "F", "W", "I", "B", "NPY"]
unfixable = ["E501"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9
target-version = "py39"

# namespace package setting
namespace-packages = ["cherab/phix"]

[tool.ruff.per-file-ignores]
"cherab/phix/machine/pfc_mesh.py" = ["E741"]
"cherab/phix/plasma/species.py" = ["B008"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
follow-imports = "silent"
ignore-missing-imports = true
show-column-numbers = true
no-pretty = true

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
blank = false


[tool.cibuildwheel]
skip = "pp* *_ppc64le *_i686 *_s390x"
build-frontend = "build"
test-requires = "pytest"
test-command = "pytest --pyargs cherab.phix"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure."
]
