[metadata]
name = cherab-phix
version = file: cherab/phix/VERSION
description = Cherab spectroscopy framework: PHiX machine configuration
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_file = LICENSE.md
author = Koyo Munechika
author_email = munechika.koyo@torus.nr.titech.ac.jp
project_urls = 
    Documentation=https://cherab-phix.netlify.app/
    Source=https://github.com/munechika-koyo/cherab_phix
    Issues=https://github.com/munechika-koyo/cherab_phix/issues
classifier = 
    Development Status :: 4 - Beta,
    Intended Audience :: Science/Research,
    Intended Audience :: Education,
    Intended Audience :: Developers,
    License :: OSI Approved :: BSD License,
    Natural Language :: English,
    Operating System :: POSIX :: Linux,
    Programming Language :: Cython,
    Programming Language :: Python :: 3,
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
packages = find:
namespace_packages = cherab
setup_requires =
  # PEP-518 encourages the use of pyproject.toml for defining
  # build dependencies...they should be defined under build-system.requires
install_requires =
  # ought to mirror requirements/install.txt
  numpy
  cython
  matplotlib
  raysect >= 0.7.1
  cherab >= 1.3.0
  calcam  # NOTE: calcam is available only from src in github. cannot install it from pypi.

[options.extras_require]
extras =
  # ought to mirror requirements/extras.txt
  # for developers
  setuptools_scm
  tox
tests =
  # ought to mirror requirements/tests.txt
  %(extras)s
  pytest >= 5.1
  hypothesis
  pytest-regressions
  pytest-xdist
docs =
  # ought to mirror requirements/docs.txt
  %(extras)s
  docutils < 0.18,>= 0.14
  ipykernel
  ipywidgets
  nbsphinx
  numpydoc
  pillow
  pygments >= 2.11.0
  sphinx >= 3.2.0
  sphinx-gallery
  sphinxcontrib-bibtex
  sphinx_rtd_theme >= 1.0.0
  sphinx-prompt
developer =
  # install everything for developers
  # ought to functionally mirror requirements.txt
  %(docs)s
  %(extras)s
  %(tests)s
all =
  # for "backwards compatibility" in terms of install instructions
  # "all" in the sense of "all optional requirements"
  %(extras)s

[build_ext]
inplace=1

[build_docs]
source-dir = docs
build-dir = docs/build
all_files = 1