python_sources = [
  '__init__.py',
  'dielectric.py',
  'metal.py',
  'roughmetal.py',
]

py.install_sources(
  python_sources,
  subdir: 'cherab/lhd/machine/material',
)


data_sources = [
  'data/sus316L.json',
  'data/PCTFE.json',
]

py.install_sources(
  data_sources,
  subdir: 'cherab/lhd/machine/material/data',
)
