python_sources = [
  '__init__.py',
  'test_raytransfer.py',
  'test_spinner.py',
  'test_utils.py',
  'test_visualize.py',
]

py.install_sources(
  python_sources,
  subdir: 'cherab/phix/tools/tests',
)


data_sources = [
  'Halpha_emissivity.npz',
]

py3.install_sources(
  data_sources,
  subdir: 'cherab/phix/tools/tests/data'
)
