resources = [
  '__init__.py',
  'FBC_half_down.rsm',
  'FBC_half_up.rsm',
  'FL_half.rsm',
  'MG_port.rsm',
  'limiter_225.rsm',
  'limiter_box.rsm',
  'rail_connection_half.rsm',
  'rail_half_down.rsm',
  'rail_half_up.rsm',
  'vaccum_flange.rsm',
  'vessel_gasket_half.rsm',
  'vessel_wall.rsm',
  'vessel_wall_fine.rsm',
]

py.install_sources(
  resources,
  subdir: 'cherab/phix/machine/geometry/data/RSMfiles',
)
