python_sources = [
  '__init__.py',
]

py.install_sources(
  python_sources,
  subdir: 'cherab/phix/observer/fast_camera/data/sensitivity',
)


data_sources = [
  'red.npz',
  'green.npz',
  'blue.npz',
  'gray.npz',
]

py3.install_sources(
  data_sources,
  subdir: 'cherab/phix/observer/fast_camera/data/sensitivity',
)
